--- a/my-web-fontend/package.json
+++ b/my-web-fontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "next": "16.0.6",
     "react": "19.2.0",
